--- a/menu-note.html
+++ b/menu-note.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Item Note</title>
   <style>
-    :root { --primary:#00a56f; --text:#111; --muted:#6b7280; }
+    :root { --primary:#005f73; --text:#111; --muted:#6b7280; }
     * { box-sizing: border-box; }
+    html, body { font-size: 15px; }
     body {
       margin: 0; font-family: "Lato", Arial, sans-serif; background:#f8f9fb; color: var(--text);
       padding-bottom: 90px;
@@ -18,29 +19,33 @@
     .back-btn {
       position: absolute; top: 12px; left: 12px;
       background: rgba(0,0,0,0.55); color: #fff; border: none; border-radius: 10px;
-      width: 40px; height: 40px; font-size: 20px; cursor: pointer;
-      display:flex; align-items:center; justify-content:center; backdrop-filter: blur(4px);
+      width: 40px; height: 40px; font-size: 20px; font-weight: 700;
+      display:flex; align-items:center; justify-content:center;
+      padding: 0;
+      line-height: 1;
+      cursor: pointer;
+      backdrop-filter: blur(4px);
     }
     .content { padding: 16px; max-width: 640px; margin: 0 auto; }
     .item-header { display:flex; align-items:flex-start; justify-content:space-between; gap:12px; }
-    .item-header h1 { margin:0; font-size: 1.35rem; line-height:1.3; }
-    .item-header .price { font-weight: 800; font-size: 1.2rem; }
-    .item-header .category { margin:2px 0 0; color: var(--muted); font-size: 0.95rem; }
+    .item-header h1 { margin:0; font-size: 1.05rem; line-height:1.3; }
+    .item-header .price { font-weight: 800; font-size: 1rem; }
+    .item-header .category { margin:2px 0 0; color: var(--muted); font-size: 0.9rem; }
     .note-section { margin-top: 18px; }
-    .section-title { display:flex; justify-content:space-between; align-items:center; margin-bottom:8px; font-weight:700; }
+    .section-title { display:flex; justify-content:space-between; align-items:center; margin-bottom:8px; font-weight:700; font-size: 0.95rem; }
     .chip { background:#f1f5f9; color:#475569; border-radius:14px; padding:4px 10px; font-size: 0.85rem; }
     textarea {
       width:100%; min-height:120px; border:1.5px solid #d9dfe7; border-radius: 12px;
-      padding:12px; font-size:1rem; resize: vertical; outline:none; background:#fff;
+      padding:12px; font-size:0.95rem; resize: vertical; outline:none; background:#fff;
     }
     textarea:focus { border-color: var(--primary); box-shadow:0 0 0 3px #00a56f22; }
     .qty-section {
-      margin: 22px 0; display:flex; align-items:center; justify-content:center; gap:28px; font-size:1.1rem;
+      margin: 22px 0; display:flex; align-items:center; justify-content:center; gap:28px; font-size:1rem;
     }
     .qty-btn {
-      width: 44px; height: 44px; border-radius: 50%; border: none; cursor: pointer;
-      display:flex; align-items:center; justify-content:center; font-size:24px; font-weight:700;
-      color:#0f5132; background: #d1fae5; transition: transform 0.1s;
+      width: 40px; height: 40px; border-radius: 50%; border: none; cursor: pointer;
+      display:flex; align-items:center; justify-content:center; font-size:20px; font-weight:700;
+      color:#ffffff; background: #005f73; transition: transform 0.1s;
     }
     .qty-btn:active { transform: scale(0.95); }
     #qty-value { min-width: 32px; text-align:center; font-weight: 700; }
@@ -52,12 +57,50 @@
     }
     .add-cart button {
       width:100%; max-width: 540px; border:none; border-radius: 12px;
-      background: linear-gradient(90deg,#00a56f,#00c389); color:#fff;
-      font-size: 1.05rem; font-weight: 800; padding: 14px 16px; cursor: pointer;
+      background: linear-gradient(90deg,#005f73,#005f73); color:#fff;
+      font-size: 1rem; font-weight: 800; padding: 12px 14px; cursor: pointer;
       box-shadow: 0 10px 28px rgba(0,165,111,0.28);
     }
     @media (min-width: 768px) {
       .hero { height: 240px; border-bottom-left-radius: 14px; border-bottom-right-radius: 14px; }
+    }
+
+    /* Dark mode overrides */
+    body.dark-mode {
+      background:#0f1116;
+      color:#e5e7eb;
+    }
+    body.dark-mode .hero { background:#111; }
+    body.dark-mode .back-btn {
+      background:rgba(0,0,0,0.65);
+      color:#f8fafc;
+    }
+    body.dark-mode .content { color:#e5e7eb; }
+    body.dark-mode .item-header h1,
+    body.dark-mode .item-header .price { color:#e5e7eb; }
+    body.dark-mode .item-header .category { color:#94a3b8; }
+    body.dark-mode .section-title { color:#e5e7eb; }
+    body.dark-mode .chip {
+      background:#1f2937;
+      color:#cbd5e1;
+    }
+    body.dark-mode textarea {
+      background:#1a1d24;
+      color:#e5e7eb;
+      border:1.5px solid #2c3340;
+    }
+    body.dark-mode textarea::placeholder { color:#94a3b8; }
+    body.dark-mode .qty-btn {
+      background:#0077b6;
+      color:#fff;
+    }
+    body.dark-mode .add-cart {
+      background:#111827;
+      box-shadow:0 -6px 24px rgba(0,0,0,0.35);
+    }
+    body.dark-mode .add-cart button {
+      background: linear-gradient(90deg,#0077b6,#00a8e8);
+      box-shadow:0 10px 28px rgba(0,119,182,0.35);
     }
   </style>
 </head>
@@ -81,7 +124,7 @@
         <span>Note to restaurant</span>
         <span class="chip">Optional</span>
       </div>
-      <textarea id="note-input" placeholder="Add your request (subject to restaurant's discretion)"></textarea>
+      <textarea id="note-input" placeholder="Add note! eg. No onions, extra spicy"></textarea>
     </section>
 
     <section class="qty-section">
