--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -47,11 +46,9 @@
     @media (max-width:500px){ .category-bar{width:100vw; border-radius:0; margin-left:0 !important; margin-right:0 !important; padding-left:0; padding-right:0;} }
     .category-btn { flex:0 0 auto; padding:8px 18px; border-radius:20px; border:none; background:#e0f2f1; color:#005f73; font-weight:bold; font-size:1rem; cursor:pointer; transition: background 0.2s, color 0.2s; }
     .category-btn.active, .category-btn:focus { background:#00aaff; color:#fff; }
-    .container-bg { max-width:900px; margin:40px auto; background:#fff; border-radius:24px; box-shadow:0 8px 32px rgba(0,0,0,0.10); padding:32px 18px; position:relative; z-index:1; min-height:70vh; display:flex; flex-direction:column; align-items:stretch; }
-    .container { width:100%; max-width:500px; margin:0 auto; display:flex; flex-direction:column; gap:0; box-sizing:border-box; padding:0 12px; }
-    .category-section { margin-bottom:28px; scroll-margin-top:90px; }
-    .category-title { font-size:1.7rem; font-weight:900; color:#005f73; margin:20px 0 14px 0; text-align:left; letter-spacing:0.3px; }
-    .menu-card { width:100%; background: linear-gradient(90deg, #ffffff 60%, #ffffff 100%); border-radius:16px; box-shadow:0 8px 32px rgba(0,0,0,0.18); border:2.5px solid #005f73; overflow:hidden; text-align:left; position:relative; display:flex; flex-direction:row; align-items:center; padding:14px 16px; min-height:100px; color:#000; margin:0 auto 18px auto; gap:16px; transition: filter 0.2s; }
+    .container-bg { max-width:960px; margin:40px auto; padding:32px 18px 140px; /* bottom padding so cart bar doesn’t cover items */ }
+    .container { width:100%; max-width:920px; margin:0 auto; padding:0 16px; }
+    .menu-card { margin-left: auto; margin-right: auto; width:100%; background: linear-gradient(90deg, #ffffff 60%, #ffffff 100%); border-radius:16px; box-shadow:0 8px 32px rgba(0,0,0,0.18); border:2.5px solid #005f73; overflow:hidden; text-align:left; position:relative; display:flex; flex-direction:row; align-items:center; padding:14px 16px; min-height:100px; color:#000; margin:0 auto 18px auto; gap:16px; transition: filter 0.2s; }
     .menu-card.unavailable { filter: blur(2px) grayscale(0.3) brightness(1.1); pointer-events:none; }
     .menu-card .not-available-overlay { position:absolute; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.7); display:flex; align-items:center; justify-content:center; font-size:1.3rem; font-weight:bold; color:#ff5252; border-radius:inherit; z-index:2; pointer-events:none; text-shadow:0 2px 8px #fff, 0 1px 0 #fff; }
     .menu-card img { width:100px; height:100px; object-fit:cover; border-radius:14px; background:#e3eafc; box-shadow:0 2px 8px rgba(31,38,135,0.08); flex-shrink:0; aspect-ratio:1/1; display:block; }
@@ -61,6 +58,50 @@
     .menu-card button { background:#005f73; color:#fff; border:none; border-radius:50%; width:56px; height:56px; font-size:2rem; font-weight:bold; cursor:pointer; box-shadow:0 2px 8px rgba(0,0,0,0.10); flex-shrink:0; margin-left:10px; transition:background 0.2s; }
     .menu-card button:active { background:#00aaff; }
     .menu-card.unavailable button { pointer-events:none; opacity:0.5; }
+    /* Center the layout and add safe padding */
+    .container-bg {
+      max-width: 960px;
+      margin: 40px auto;
+      padding: 32px 18px 140px; /* bottom padding so cart bar doesn’t cover items */
+    }
+    .container {
+      width: 100%;
+      max-width: 920px;
+      margin: 0 auto;
+      padding: 0 16px;
+    }
+    .menu-card {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    /* Keep category bar pinned */
+    .category-bar {
+      position: sticky;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 200;
+      width: 100%;
+      margin: 0 auto;
+      border-radius: 0;
+      background: linear-gradient(90deg, #e0f7fa 60%, #ffe066 100%) !important;
+      padding: 12px 14px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.12);
+    }
+
+    /* Mobile tweaks */
+    @media (max-width: 700px) {
+      .container {
+        padding: 0 14px;
+      }
+      .container-bg {
+        padding: 24px 12px 170px;
+      }
+      .category-bar {
+        padding: 10px 12px;
+      }
+    }
     /* Cart toggle button (basket bar) */
     #cart-toggle-btn {
       position: fixed;
@@ -222,17 +263,15 @@
     @media (max-width:500px){ .category-bar{width:100vw; border-radius:0; margin-left:0 !important; margin-right:0 !important; padding-left:0; padding-right:0;} }
     .category-btn { flex:0 0 auto; padding:8px 18px; border-radius:20px; border:none; background:#e0f2f1; color:#005f73; font-weight:bold; font-size:1rem; cursor:pointer; transition: background 0.2s, color 0.2s; }
     .category-btn.active, .category-btn:focus { background:#00aaff; color:#fff; }
-    .container-bg { max-width:900px; margin:40px auto; background:#fff; border-radius:24px; box-shadow:0 8px 32px rgba(0,0,0,0.10); padding:32px 18px; position:relative; z-index:1; min-height:70vh; display:flex; flex-direction:column; align-items:stretch; }
-    .container { width:100%; max-width:500px; margin:0 auto; display:flex; flex-direction:column; gap:0; box-sizing:border-box; padding:0 12px; }
-    .category-section { margin-bottom:28px; scroll-margin-top:90px; }
-    .category-title { font-size:1.7rem; font-weight:900; color:#005f73; margin:20px 0 14px 0; text-align:left; letter-spacing:0.3px; }
-    .menu-card { width:100%; background: linear-gradient(90deg, #ffffff 60%, #ffffff 100%); border-radius:16px; box-shadow:0 8px 32px rgba(0,0,0,0.18); border:2.5px solid #005f73; overflow:hidden; text-align:left; position:relative; display:flex; flex-direction:row; align-items:center; padding:14px 16px; min-height:100px; color:#000; margin:0 auto 18px auto; gap:16px; transition: filter 0.2s; }
+    .container-bg { max-width:960px; margin:40px auto; padding:32px 18px 140px; /* bottom padding so cart bar doesn’t cover items */ }
+    .container { width:100%; max-width:920px; margin:0 auto; padding:0 16px; }
+    .menu-card { margin-left: auto; margin-right: auto; width:100%; background: linear-gradient(90deg, #ffffff 60%, #ffffff 100%); border-radius:16px; box-shadow:0 8px 32px rgba(0,0,0,0.18); border:2.5px solid #005f73; overflow:hidden; text-align:left; position:relative; display:flex; flex-direction:row; align-items:center; padding:14px 16px; min-height:100px; color:#000; margin:0 auto 18px auto; gap:16px; transition: filter 0.2s; }
     .menu-card.unavailable { filter: blur(2px) grayscale(0.3) brightness(1.1); pointer-events:none; }
     .menu-card .not-available-overlay { position:absolute; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.7); display:flex; align-items:center; justify-content:center; font-size:1.3rem; font-weight:bold; color:#ff5252; border-radius:inherit; z-index:2; pointer-events:none; text-shadow:0 2px 8px #fff, 0 1px 0 #fff; }
     .menu-card img { width:100px; height:100px; object-fit:cover; border-radius:14px; background:#e3eafc; box-shadow:0 2px 8px rgba(31,38,135,0.08); flex-shrink:0; aspect-ratio:1/1; display:block; }
     .menu-card .details { flex:1; display:flex; flex-direction:column; justify-content:center; min-width:0; }
     .menu-card h3 { margin:0 0 4px 0; color:#000; font-size:0.98rem; font-weight:700; letter-spacing:0.2px; word-break:break-word; cursor:pointer; }
-    .menu-card p { margin:0; color:#005f73; font-size:0.92rem; }
+    .menu-card p { margin:0; color:#000; font-size:0.92rem; }
     .menu-card button { background:#005f73; color:#fff; border:none; border-radius:50%; width:56px; height:56px; font-size:2rem; font-weight:bold; cursor:pointer; box-shadow:0 2px 8px rgba(0,0,0,0.10); flex-shrink:0; margin-left:10px; transition:background 0.2s; }
     .menu-card button:active { background:#00aaff; }
     .menu-card.unavailable button { pointer-events:none; opacity:0.5; }
@@ -293,13 +332,12 @@
     }
     .cart-item-controls {
       display: flex;
-      color: #ffffff
       justify-content: flex-end;
       align-items: center;
       gap: 6px;
     }
     .cart-item-controls button {
-      background: #005f73;
+      background: #0ea5e9;
       border-radius: 6px;
       padding: 4px 8px;
       font-size: 0.9rem;
@@ -316,20 +354,20 @@
     .cart-item .cart-note {
       grid-column: 1 / -1;
       font-size: 0.9rem;
-      color: #000000;
+      color: #475569;
       padding-top: 4px;
     }
 
     /* Totals */
     #cart-count, #cart-total {
       margin: 2px 0;
-      color: #000000;
+      color: #0f172a;
       font-weight: 700;
     }
 
     /* Checkout button */
     #cart-section > button {
-      background: #005f73;
+      background: #10b981;
       color: #ffffff;
       font-size: 1rem;
       font-weight: 800;
@@ -356,11 +394,9 @@
     @media (max-width:500px){ .category-bar{width:100vw; border-radius:0; margin-left:0 !important; margin-right:0 !important; padding-left:0; padding-right:0;} }
     .category-btn { flex:0 0 auto; padding:8px 18px; border-radius:20px; border:none; background:#e0f2f1; color:#005f73; font-weight:bold; font-size:1rem; cursor:pointer; transition: background 0.2s, color 0.2s; }
     .category-btn.active, .category-btn:focus { background:#00aaff; color:#fff; }
-    .container-bg { max-width:900px; margin:40px auto; background:#fff; border-radius:24px; box-shadow:0 8px 32px rgba(0,0,0,0.10); padding:32px 18px; position:relative; z-index:1; min-height:70vh; display:flex; flex-direction:column; align-items:stretch; }
-    .container { width:100%; max-width:500px; margin:0 auto; display:flex; flex-direction:column; gap:0; box-sizing:border-box; padding:0 12px; }
-    .category-section { margin-bottom:28px; scroll-margin-top:90px; }
-    .category-title { font-size:1.7rem; font-weight:900; color:#005f73; margin:20px 0 14px 0; text-align:left; letter-spacing:0.3px; }
-    .menu-card { width:100%; background: linear-gradient(90deg, #ffffff 60%, #ffffff 100%); border-radius:16px; box-shadow:0 8px 32px rgba(0,0,0,0.18); border:2.5px solid #005f73; overflow:hidden; text-align:left; position:relative; display:flex; flex-direction:row; align-items:center; padding:14px 16px; min-height:100px; color:#000; margin:0 auto 18px auto; gap:16px; transition: filter 0.2s; }
+    .container-bg { max-width:960px; margin:40px auto; padding:32px 18px 140px; /* bottom padding so cart bar doesn’t cover items */ }
+    .container { width:100%; max-width:920px; margin:0 auto; padding:0 16px; }
+    .menu-card { margin-left: auto; margin-right: auto; width:100%; background: linear-gradient(90deg, #ffffff 60%, #ffffff 100%); border-radius:16px; box-shadow:0 8px 32px rgba(0,0,0,0.18); border:2.5px solid #005f73; overflow:hidden; text-align:left; position:relative; display:flex; flex-direction:row; align-items:center; padding:14px 16px; min-height:100px; color:#000; margin:0 auto 18px auto; gap:16px; transition: filter 0.2s; }
     .menu-card.unavailable { filter: blur(2px) grayscale(0.3) brightness(1.1); pointer-events:none; }
     .menu-card .not-available-overlay { position:absolute; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0.7); display:flex; align-items:center; justify-content:center; font-size:1.3rem; font-weight:bold; color:#ff5252; border-radius:inherit; z-index:2; pointer-events:none; text-shadow:0 2px 8px #fff, 0 1px 0 #fff; }
     .menu-card img { width:100px; height:100px; object-fit:cover; border-radius:14px; background:#e3eafc; box-shadow:0 2px 8px rgba(31,38,135,0.08); flex-shrink:0; aspect-ratio:1/1; display:block; }
