--- a/menu.html
+++ b/menu.html
@@ -52,16 +52,16 @@
 
 .container-bg {
   width: 100%;
-  max-width: 900px;
-  margin: 40px auto;
-  padding: 32px var(--mobile-gutter) 140px;
+  max-width: 100%;
+  margin: 0;
+  padding: 0 var(--mobile-gutter);
   box-sizing: border-box;
 }
 
 .container {
   width: 100%;
-  max-width: 900px;
-  margin: 0 auto;
+  max-width: 100%;
+  margin: 0;
   display: flex;
   flex-direction: column;
   gap: 0;
@@ -71,8 +71,8 @@
 
 .menu-card {
   width: 100%;
-  max-width: 900px;
-  margin: 0 auto 18px;
+  max-width: 100%;
+  margin: 0 0 18px 0;
   padding: 14px 16px;
   border-radius: 16px;
   border: 2.5px solid #005f73;
