--- a/menu.html
+++ b/menu.html
@@ -76,6 +76,9 @@
   padding: 14px 16px;
   border-radius: 16px;
   border: 2.5px solid #005f73;
+  border-bottom: 2.5px solid #005f73;
+  border-left: none;
+  border-right: none;
   box-shadow: 0 8px 32px rgba(0,0,0,0.18);
   display: flex;
   gap: 16px;
@@ -90,8 +93,25 @@
     max-width: 100%;
     padding: 10px 6px;
     gap: 12px;
+  .category-section {
+    width: 100% !important;
+    max-width: 100% !important;
+    margin: 0 !important;
+    padding: 0 !important;
+  }
   }
 }
+
+.category-section {
+  width: 100%;
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
 
 
 
@@ -634,4 +654,3 @@
   </script>
 </body>
 </html>
-
