--- a/shop-list.html
+++ b/shop-list.html
@@ -154,17 +154,17 @@
 			box-shadow: var(--shadow);
 		}
 		.profile .profile-badge {
-			width: 46px;
-			height: 46px;
+			width: 42px;
+			height: 42px;
 			border-radius: 12px;
-			background: linear-gradient(145deg, #0ea5e9, #0f766e 60%, #0b172a 105%);
+			background: linear-gradient(145deg, #0ea5e9, #0f766e 60%, #0b172a 110%);
 			display: grid;
 			place-items: center;
 			color: #e0f2fe;
 			font-weight: 800;
 			letter-spacing: 0.6px;
-			border: 2px solid rgba(14,165,233,0.35);
-			box-shadow: 0 10px 28px rgba(0,0,0,0.25);
+			border: 2px solid rgba(14,165,233,0.3);
+			box-shadow: 0 10px 24px rgba(0,0,0,0.2);
 		}
 		.filters {
 			position: sticky;
@@ -252,6 +252,12 @@
 		.empty { grid-column: 1 / -1; text-align: center; padding: 28px 14px; background: var(--panel); border: 1px solid var(--stroke); border-radius: 14px; color: var(--subtle); }
 		@media (max-width: 880px) { .hero { grid-template-columns: 1fr; } .actions { justify-items: start; width: 100%; } .filters { grid-template-columns: 1fr; position: static; } }
 		@media (max-width: 620px) { .card { grid-template-rows: 150px auto; } }
+		@media (max-width: 720px) {
+			body { background: #f8f9fc; }
+			.topbar { position: static; margin: 0; padding: 8px 0 0 0; backdrop-filter: none; background: transparent; }
+			.hero { padding: 14px; border-radius: 14px; box-shadow: 0 10px 24px rgba(0,0,0,0.08); }
+			.quote-chip { max-width: 100%; }
+		}
 	</style>
 </head>
 <body>
@@ -260,7 +266,6 @@
 			<div class="hero">
 				<div>
 					<div class="brand">
-						<div class="brand-mark" aria-hidden="true">UNM</div>
 						<div>
 							<h1>UNM Cafeteria</h1>
 							<div class="meta">
@@ -277,7 +282,7 @@
 							<div style="font-weight:700; color:var(--text);">Welcome back</div>
 							<div style="color:var(--subtle); font-size:0.95rem;">Stay logged in to keep orders quick.</div>
 						</div>
-						<div id="profileBadge" class="profile-badge" aria-label="UNM badge">UNM</div>
+						<div id="profileBadge" class="profile-badge" aria-label="Profile badge">U</div>
 					</div>
 					<button id="settingsBtn" style="padding:10px 12px; border-radius:12px; border:1px solid var(--stroke); background:var(--panel); color:var(--text); font-weight:700; cursor:pointer; box-shadow:var(--shadow);">Settings</button>
 				</div>
@@ -341,8 +346,8 @@
 		const searchInput = document.getElementById('shopSearch');
 		const sortSelect = document.getElementById('shopSort');
 		const filterSelect = document.getElementById('shopFilter');
-		const profileBadge = document.getElementById('profileBadge');
 		const quoteChip = document.getElementById('quoteChip');
+		const profileBadge = document.getElementById('profileBadge');
 		const dotLoader = document.getElementById('dotLoader');
 		const settingsBtn = document.getElementById('settingsBtn');
 		const settingsModal = document.getElementById('settingsModal');
@@ -538,4 +543,3 @@
 	</script>
 </body>
 </html>
-
